--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,9 +6,9 @@ stage('scm checkout')
 { steps { git branch: 'master', url: 'https://github.com/prakashk0301/mavenproject.git' }}
 
 
-stage('validate the job')
+stage('compile the job')
 {steps { withMaven(globalMavenSettingsConfig: '', jdk: 'JDK_HOME', maven: 'MVN_HOME', mavenSettingsConfig: '', traceability: true) {
-    sh 'mvn validate'
+    sh 'mvn compile'
 } }}
 
 }
