--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,5 +11,14 @@ stage('compile the job')
     sh 'mvn compile'
 } }}
 
+stage('build the job')
+{steps { withMaven(globalMavenSettingsConfig: '', jdk: 'JDK_HOME', maven: 'MVN_HOME', mavenSettingsConfig: '', traceability: true) {
+    sh 'mvn clean -B -DskipTests package'
+} }}
+
+stage('deploy to tomcat')
+{ steps { sshagent(['DEVCICD'])
+  { sh 'scp -o StrictHostKeyChecking=no webapp/target/webapp.war ec2-user@172.31.27.20:/usr/share/tomcat/webapps'  } } }
+
 }
 }
